# uspto-explainable-ai

./: .env.example  .gitignore  CMakeLists.txt  README.md  conanfile.txt  docker-compose.yml  generate-whoosh-parser.sh  requirements.txt
grafana/: submission-monitoring.json
python/: generate_submission_notebooks.py  original-submission.ipynb  whoosh_utils.py
src/uspto/: config.h  csv.h  files.h  generators.h  grafana.h  index.h  patents.h  progress.h  queries.h  searcher.h  submission.h  timer.h
src/uspto/tools/: create-full-index.cpp  create-validation-index.cpp  reformat-patent-data.cpp  run-submission.cpp  test-searcher.cpp  test-submission.cpp
src/uspto/whoosh/: Whoosh.g4  Whoosh.interp  Whoosh.tokens  WhooshBaseListener.cpp  WhooshBaseListener.h  WhooshBaseVisitor.cpp  WhooshBaseVisitor.h  WhooshLexer.cpp  WhooshLexer.h  WhooshLexer.interp  WhooshListener.cpp  WhooshListener.h  WhooshParser.cpp  WhooshParser.h  WhooshVisitor.cpp  WhooshVisitor.h
tests/queries/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  041.json  (+57 more)
tests/uspto/: patents.cpp  queries.cpp
